Fix an issue where enabling this plugin prevents code block wrapping

--- a/styles/copy-code-to-clipboard.less
+++ b/styles/copy-code-to-clipboard.less
@@ -3,9 +3,13 @@
 
 div.copy-code-to-clipboard-block-container {
   position: relative;
+  code {
+    white-space: pre;
+  }
 }
 
-div.copy-code-to-clipboard-block-container button.copy-code-to-clipboard-button {
+div.copy-code-to-clipboard-block-container
+  button.copy-code-to-clipboard-button {
   position: absolute;
   top: 0;
   right: 0;
@@ -17,11 +21,14 @@ button.copy-code-to-clipboard-button.ui.button {
   display: none;
 }
 
-div.copy-code-to-clipboard-block-container:hover button.copy-code-to-clipboard-button.ui.button {
+div.copy-code-to-clipboard-block-container:hover
+  button.copy-code-to-clipboard-button.ui.button {
   display: inline-block;
 }
 
-*:not(.copy-code-to-clipboard-block) span.copy-code-to-clipboard-inline-container:hover button.copy-code-to-clipboard-button.ui.button {
+*:not(.copy-code-to-clipboard-block)
+  span.copy-code-to-clipboard-inline-container:hover
+  button.copy-code-to-clipboard-button.ui.button {
   display: inline;
 }
 
